fix reviews spacing

--- a/style.css
+++ b/style.css
@@ -234,8 +234,6 @@ footer a{
     font-size: 14px;
 }
 .slide-body{
-    width: 120%;
-    min-height: 100%;
     height: auto;
     margin-left: 20px;
     position: relative;
